removed bunch of unused imports in almost every class + some small refactoring